# hospital-softphone-tauri

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/auth/: Login.tsx
src/features/consultation/: ConsultationMonitor.tsx
src/features/softphone/: SoftphoneConsole.tsx
src/features/webrtc-lab/: WebRtcLab.tsx
src/shared/api/: apiEnvironment.ts
src/shared/ui/: WindowControls.tsx
